[workspace]
resolver = "2"
members = ["api", "program"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
homepage = ""
documentation = ""
readme = "../README.md"
keywords = ["solana"]

[workspace.dependencies]
create-token-api = { path = "./api", version = "0.1.0" }
spl-token = "^4"
spl-associated-token-account = "^2"
mpl-token-metadata = "^4"
bytemuck = "1.14"
num_enum = "0.7"
solana-program = "^1.18"
steel = { version = "1.3", features = ["spl"] }
thiserror = "1.0"
